Fix z-index

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -535,6 +535,10 @@ html, body {
   }
 }
 
+.__slackin {
+  z-index: 100;
+}
+
 ////////////////////////////////////////////////////////////////////////////////
 // CODE SAMPLE STYLES
 ////////////////////////////////////////////////////////////////////////////////
